--- a/css/index.css
+++ b/css/index.css
@@ -44,13 +44,13 @@ body {
 }
 
 
-body:before{
+.main:before{
     content:"";
     width:900px; 
     height:900px; 
     position:absolute;
-    background-image: radial-gradient( #485FC7 10%, #ffffff ); 
-    left: -740px;
+    background-image: radial-gradient( circle 400px, #485FC7 50% , #ffffff ); 
+    left: -400px;
     top:-10px;
     
     border-radius: 600px;
@@ -150,6 +150,15 @@ header{
     border: none;
     border-radius: 50px;
 
+    font-family: "Raleway";
+    font-size: 14px;
+    font-weight: Normal;
+    line-height: 16.44px;
+    text-transform: capitalize;
+    color: #ffffff;
+
+    cursor: pointer;
+
     -webkit-appearance: none;
 	-moz-appearance: none;
     
@@ -164,12 +173,21 @@ header{
     border: none;
     border-radius: 50px;
 
+    font-family: "Raleway";
+    font-size: 14px;
+    font-weight: Normal;
+    line-height: 16.44px;
+    text-transform: capitalize;
+    color: #000000;
+
+    cursor: pointer;
+
     -webkit-appearance: none;
 	-moz-appearance: none;
    
 }
 
-.button_link1{
+/* .button_link1{
     text-decoration: none;
     font-family: "Raleway";
     font-size: 14px;
@@ -189,7 +207,7 @@ header{
     line-height: 16.44px;
     text-transform: capitalize;
     color: #000000;
-}
+} */
 
 /* Главная страница */
 main {
@@ -306,19 +324,16 @@ main {
     border: none;
     border-radius: 20px;
 
-    -webkit-appearance: none;
-	-moz-appearance: none;
-}
-
-
-
-.preview_link {
-    text-decoration: none;
     font-family: "Raleway";
     font-size: 28px;
     font-weight: Normal;
     line-height: 16.44px; 
     color: #ffffff;
+
+    cursor: pointer;
+
+    -webkit-appearance: none;
+	-moz-appearance: none;
 }
 
 
@@ -326,6 +341,21 @@ main {
 
 .about{
     margin-top: 130px;
+}
+
+.about:before{
+    content:"";
+    width:900px; 
+    height:900px; 
+    position:absolute;
+    background-image: radial-gradient( circle 400px, #485FC7 12% , #ffffff ); 
+    right: -400px;
+    top:390px;
+    
+    border-radius: 600px;
+    opacity: 0.2;
+    z-index: -1;
+    
 }
 
 .about_title{
@@ -400,6 +430,21 @@ main {
 
 .generator{
     margin-top: 60px;
+}
+
+.generator:before{
+    content:"";
+    width:900px; 
+    height:900px; 
+    position:absolute;
+    background-image: radial-gradient( circle 400px, #485FC7 12% , #ffffff ); 
+    right: -400px;
+    top:1800px;
+    
+    border-radius: 600px;
+    opacity: 0.2;
+    z-index: -1;
+    
 }
 
 .generator_box{
@@ -556,6 +601,21 @@ main {
     margin-top: 60px;
 }
 
+.private:before{
+    content:"";
+    width:900px; 
+    height:900px; 
+    position:absolute;
+    background-image: radial-gradient( circle 442px, #485FC7 78% , #ffffff ); 
+    left: -400px;
+    top:3000px;
+    
+    border-radius: 600px;
+    opacity: 0.2;
+    z-index: -1;
+    
+}
+
 .private_title{
     font-family: "Raleway";
     font-size: 36px;
@@ -617,6 +677,14 @@ main {
     border: none;
     border-radius: 50px;
 
+    font-family: "Raleway";
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 28.18px;
+    color: #ffffff;
+
+    cursor: pointer;
+
     -webkit-appearance: none;
 	-moz-appearance: none;
     
@@ -630,6 +698,14 @@ main {
     background-color: #485FC7 ;
     border: none;
     border-radius: 50px;
+
+    font-family: "Raleway";
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 28.18px;
+    color: #ffffff;
+
+    cursor: pointer;
 
     -webkit-appearance: none;
 	-moz-appearance: none;
@@ -706,19 +782,20 @@ main {
     border: none;
     border-radius: 20px;
 
+    font-family: "Raleway";
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 28.18px;
+    color: #ffffff;
+
+    cursor: pointer;
+
     -webkit-appearance: none;
 	-moz-appearance: none;
    
 }
 
-.online_doska_link {
-    font-family: "Raleway";
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 28.18px;
-    text-decoration: none;
-    color: #ffffff;
-}
+
 
 
 /* Вопросы и ответы */
@@ -758,19 +835,20 @@ main {
     border: none;
     border-radius: 20px;
 
+    font-family: "Raleway";
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 32.87px;
+    color: #ffffff;
+
+    cursor: pointer;
+
     -webkit-appearance: none;
 	-moz-appearance: none;
    
 }
 
-.questions_link {
-    font-family: "Raleway";
-    font-size: 28px;
-    font-weight: 600;
-    line-height: 32.87px;
-    text-decoration: none;
-    color: #ffffff;
-}
+
 .back_form{
     display: none;
     width: 534px;
@@ -790,7 +868,7 @@ main {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); 
 
     z-index: 2;
 }
@@ -1145,10 +1223,11 @@ footer{
         display: none;
     }
 
-    .box_text { 
-      /* margin-left: 17%;
-      margin-right: 31%; */
-      margin: 0 auto;
+    .box_text1 {
+        width: 70vw; 
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 50px;
       
 
     }
@@ -1162,7 +1241,7 @@ footer{
     .preview_box {
         width: 100%;
         height: auto;
-        margin: 0 auto;
+        margin-top: 20px;
         
     }
     .preview {
@@ -1172,6 +1251,7 @@ footer{
 
     .preview_text_box {
         display: none;
+        
         
     }
 
@@ -1186,6 +1266,13 @@ footer{
 
     .preview_list {
         flex-direction: column;
+        align-items: center;
+    }
+
+    .preview_list_item {
+        margin-top: 30px;
+
+        line-height: 21.13px
     }
 
     .image_preview {
@@ -1198,6 +1285,15 @@ footer{
         margin-left: auto;
         margin-right: auto;
         padding: 10px 0;
+
+        font-family: "Raleway";
+        font-size: 18px;
+        font-weight: Medium;
+        line-height: 21.13px;
+        
+
+
+        border-radius: 12px;
         
     }
 
@@ -1215,6 +1311,10 @@ footer{
         margin-right: auto;
     }
 
+    .about{
+        margin-top: 230px;
+    }
+
     .about_title{
         font-family: "Raleway";
         font-size: 24px;
@@ -1227,12 +1327,13 @@ footer{
     .about_text_box {
         margin-left: auto;
         margin-right: auto;
+        width: 80vw;
 
         font-family: "Raleway";
         font-size: 14px;
         font-weight: Normal;
         line-height: 16.44px;
-        text-align: center;
+        text-align: left;
     }
 
     .example_box {
@@ -1284,9 +1385,10 @@ footer{
     }
 
     .card_generator {
-        width: 100%;
         margin-right: auto;
         margin-left: auto;
+
+        border-radius: 24px;
     }
 
     .gen_title_example{
@@ -1310,7 +1412,7 @@ footer{
     }
 
     .generator_example_box{
-        width: 18em;
+        width: 80vw;
         margin-left: auto;
         margin-right: auto;
     }
@@ -1358,6 +1460,7 @@ footer{
 
     .print_box {
         width: 100%;
+        min-height: fit-content;
         
         flex-direction: column;
     }
@@ -1379,6 +1482,8 @@ footer{
         flex: none;
         position: relative;
         width: 100%;
+        margin-top: 30px;
+        
         /* margin-left: 50%; */
         /* flex-direction: column; */
     }
@@ -1400,8 +1505,8 @@ footer{
     }
 
     .print_image{
-        width: 75vw;
-        height: 250px;
+        width: 82vw;
+        height: 65vw;
         
         margin-left: auto;
         margin-right: auto;
@@ -1416,20 +1521,23 @@ footer{
     .box_text{
         margin-left: auto;
         margin-right: auto;
+        padding-top: 50px;
     }
 
     .image_private{
         
         margin-left: auto;
         margin-right: auto;
-        height: 40vh;
-        width:80vw;
+        margin-top: 30px;
+        height: 47vh;
+        width:75vw;
         
            
     }
     .control_registration{
         margin-left: auto;
         margin-right: auto;
+        margin-top: 10px;
         
         flex-direction: column;
     }
@@ -1443,12 +1551,28 @@ footer{
         width: 75vw;
         margin-left: auto;
         margin-right: auto;
+
+        font-family: "Raleway";
+        font-size: 18px;
+        font-weight: Medium;
+        line-height: 21.13px;
+
+        border-radius: 12px;
     }
 
     .private_button2{
         width: 75vw;
         margin-left: auto;
         margin-right: auto;
+
+        margin-top: 10px;
+
+        font-family: "Raleway";
+        font-size: 18px;
+        font-weight: Medium;
+        line-height: 21.13px;
+
+        border-radius: 12px;
     }
 
     .box_questions_text {
@@ -1460,19 +1584,20 @@ footer{
     }
 
     .box_online_doska_image{
-        width: 95vw;
+        width: 86vw;
+        height: 68vw;
         margin-left: auto;
         margin-right: auto;
 
     }
 
     .box_online_doska_button{
-        width: 100%;
+        width: 134vw;
         float: none;
         margin: 10px -190px;
     }
     .box_online_doska_text{
-        width: 100%;
+        width: 86vw;
         float: none;
         margin-left: auto;
         margin-right: auto;
@@ -1480,14 +1605,36 @@ footer{
         text-align: center;
     }
 
-    .box_online_doska_text div {
+    .box_online_doska_title{
         margin-left: auto;
         margin-right: auto;
+
     }
 
+    .online_doska_text {
+        font-family: "Raleway";
+        font-size: 14px;
+        font-weight: Medium;
+        line-height: 16.44px;
+
+        text-align: left;
+    }
+
+   
+
     .online_doska_button{
+        width: 86vw;
         margin-left: 50%;
         margin-right: 50%;
+
+        font-family: "Raleway";
+        font-size: 18px;
+        font-weight: Medium;
+        line-height: 21.13px;
+
+
+
+        border-radius: 12px;
     }
 
     .questions_button{
@@ -1528,32 +1675,93 @@ footer{
     .questions{
         display: flex;
         width: 100%;
+        margin-top: 40px;
         flex-direction: column;
     }
+
+
 
     .box_questions_image{
         position: static;
         width: 75vw;
-        height: 250px;
+        height: 75vw;
         margin-left: auto;
         margin-right: auto;
+        min-height: fit-content;
     }
 
     .box_questions_text{
+        width: 80vw;
         margin-left: auto;
         margin-right: auto;
         text-align: center;
     }
     
     .box_questions_button{
-        width: 100%;
+        width: 75vw;
         margin-left: auto;
         margin-right: auto;
         
     }
     .questions_button{
+        width: 100%;
+        height: 50px;
         margin-top: 10px;
+        margin-left: 0;
+        
+
+        font-family: "Raleway";
+        font-size: 18px;
+        font-weight: Medium;
+        line-height: 21.13px;
+
+
+        border-radius: 12px;
+
+
     }
+
+    .back_form {
+        width: 70%;
+        height: 70%;
+    }
+
+    .form_active{
+    transform: translate(-67%, -66%);
+  }
+
+    .input{
+        width: 90%;
+    }
+
+    .form_button{
+        width: 90%;
+        margin-left: 5%;
+        
+    }
+
+    .form_title{
+        font-family: "Raleway";
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 21.78px;
+
+
+    }
+
+    .form_text{
+        text-align: left;
+        padding-left: 5%;
+        margin: 0;
+
+        font-family: "Raleway";
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 14.52px;
+        
+
+    }
+
     .comment {
         display: none;
     }
@@ -1568,30 +1776,92 @@ footer{
     }
 
     .info_box{
-        width: 100%;
-        margin-left: 75px;
-        margin-right: auto;
-        text-align: center;
+        width: 100%; 
     }
+
+
     .info_list{
         padding: 0;
+        width: 75vw;
+        margin-left: auto;
+        margin-right: auto;
     }
+
+    .info_list_item{
+        text-align: center;
+    }
+
+    .info_list_item:nth-child(n+2){
+        text-align: center;
+    }
+
     .page_box{
         display: inline-block;
+        margin-left: 10vw;
+        
         width: fit-content;
-        margin-left: 75px;
+
+    }
+    .page_list_item:nth-child(n+2){
+        margin-top: 30px;
+    }
+
+    .page_list_link:nth-child(n+2){
+        font-family: "Raleway";
+        font-size: 12px;
+        font-weight: Normal;
+        line-height: 14.09px;
+        text-align: left;
+
+    }
+
+    .training_list_item:nth-child(n+2){
+        margin-top: 30px;
+    }
+
+    .training_list_link:nth-child(n+2){
+        font-family: "Raleway";
+        font-size: 12px;
+        font-weight: Normal;
+        line-height: 14.09px;
+        text-align: left;
+
     }
 
     .training_box{
         display: inline-block;
+       
+        margin-left: 22vw;
+        
         
         width: fit-content;
     }
     .social_box {
         width: 100%;
+        margin-left: 5vw;
+        margin-right: 5vw;
+        margin-top: 0;
+        flex-direction: column-reverse;
+        align-items: center;
 
         border: none;
-        flex-direction: column;
+    }
+
+    .social{
+        
+        margin-left: auto;
+        margin-right: auto;
+        
+    }
+
+    .copyright{
+        height: 50px;
+        width: 100%;
+        padding-top: 5%;
+
+        text-align: center;
+
+        border-top: 1px solid rgba(0, 0, 0, .2);
     }
 }
 
